test/spec/call.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/call.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/call.wast:152:30: type stack size too small at i32.eqz. got 0, expected at least 1
    (func $type-void-vs-num (i32.eqz (call 1)))
                             ^^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:152:5: type stack at end of function is 1. expected 0
    (func $type-void-vs-num (i32.eqz (call 1)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:159:29: type mismatch at i32.eqz. got i64, expected i32
    (func $type-num-vs-num (i32.eqz (call 1)))
                            ^^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:159:5: type stack at end of function is 1. expected 0
    (func $type-num-vs-num (i32.eqz (call 1)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:167:26: type stack size too small at call. got 0, expected at least 1
    (func $arity-0-vs-1 (call 1))
                         ^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:174:26: type stack size too small at call. got 0, expected at least 2
    (func $arity-0-vs-2 (call 1))
                         ^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:181:5: type stack at end of function is 1. expected 0
    (func $arity-1-vs-0 (call 1 (i32.const 1)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:188:5: type stack at end of function is 2. expected 0
    (func $arity-2-vs-0 (call 1 (f64.const 2) (i32.const 1)))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:204:36: type stack size too small at call. got 1, expected at least 2
    (func $type-first-void-vs-num (call 1 (nop) (i32.const 1)))
                                   ^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:211:37: type stack size too small at call. got 1, expected at least 2
    (func $type-second-void-vs-num (call 1 (i32.const 1) (nop)))
                                    ^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:218:35: type mismatch for argument 0 of call. got f64, expected i32
    (func $type-first-num-vs-num (call 1 (f64.const 1) (i32.const 1)))
                                  ^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:218:35: type mismatch for argument 1 of call. got i32, expected f64
    (func $type-first-num-vs-num (call 1 (f64.const 1) (i32.const 1)))
                                  ^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:225:36: type mismatch for argument 0 of call. got i32, expected f64
    (func $type-second-num-vs-num (call 1 (i32.const 1) (f64.const 1)))
                                   ^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:225:36: type mismatch for argument 1 of call. got f64, expected i32
    (func $type-second-num-vs-num (call 1 (i32.const 1) (f64.const 1)))
                                   ^^^^^^
assert_invalid error:
  third_party/testsuite/call.wast:235:37: function variable out of range (max 1)
  (module (func $unbound-func (call 1)))
                                    ^
assert_invalid error:
  third_party/testsuite/call.wast:239:35: function variable out of range (max 1)
  (module (func $large-func (call 1012321300)))
                                  ^^^^^^^^^^
35/35 tests passed.
;;; STDOUT ;;)
